--- a/.gitignore
+++ b/.gitignore
@@ -146,3 +146,5 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+Unity 2D Project/Blun/Blun/ProjectSettings/EditorBuildSettings.asset
+Unity 2D Project/Blun/Blun/ProjectSettings/EditorBuildSettings.asset
