--- a/.gitignore
+++ b/.gitignore
@@ -148,3 +148,4 @@ Temporary Items
 .apdisk
 Unity 2D Project/Blun/Blun/ProjectSettings/EditorBuildSettings.asset
 Unity 2D Project/Blun/Blun/ProjectSettings/EditorBuildSettings.asset
+Unity 2D Project/Blun/Blun/ProjectSettings/EditorBuildSettings.asset
