--- a/.gitignore
+++ b/.gitignore
@@ -149,3 +149,4 @@ Temporary Items
 Unity 2D Project/Blun/Blun/ProjectSettings/EditorBuildSettings.asset
 Unity 2D Project/Blun/Blun/ProjectSettings/EditorBuildSettings.asset
 Unity 2D Project/Blun/Blun/ProjectSettings/EditorBuildSettings.asset
+Unity 2D Project/Blun/Blun/ProjectSettings/ProjectSettings.asset
